sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:24: error: not found: value aMixe
  } while (ecart>1 || aMixe)
                      ^